tests/baselines/reference/nonArrayRestArgs.errors.txt
tests/cases/compiler/nonArrayRestArgs.ts(1,14): error TS2370: A rest parameter must be of an array type.
tests/cases/compiler/nonArrayRestArgs.ts(2,23): error TS2339: Property '0' does not exist on type 'Number'.


==== tests/cases/compiler/nonArrayRestArgs.ts (2 errors) ====
    function foo(...rest: number) { // error
                 ~~~~~~~~~~~~~~~
!!! error TS2370: A rest parameter must be of an array type.
    	var x: string = rest[0];
    	                     ~
!!! error TS2339: Property '0' does not exist on type 'Number'.
    	return x;
    }